force-app/src/objects/vcm__VCM_Entry__c.object
<CustomObject>
    <fields>
        <fullName>vcm__Business_Impact__c</fullName>
        <label>Business Impact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vcm__Business_Objective__c</fullName>
        <label>Business Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vcm__Business_Value_Driver__c</fullName>
        <label>Business Value Driver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vcm__Business_Value_Lever__c</fullName>
        <label>Business Value Lever</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vcm__Cloud__c</fullName>
        <label>Cloud</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vcm__Order__c</fullName>
        <label>Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vcm__TheKPI__c</fullName>
        <label>KPI</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vcm__VCM_Type__c</fullName>
        <label>VCM Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>VCM Entry</label>
    <nameField>
        <displayFormat>Entry-{0000}</displayFormat>
        <label>VCM Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCM Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>